--- a/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/en.json
+++ b/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/en.json
@@ -63,6 +63,31 @@
     "DepartmentId": "Department id",
     "Department": "Department",
 
+    //Educations
+    "Permission:Educations": "Educations Management",
+    "Permission:Educations.Create": "Creating new educations",
+    "Permission:Educations.Edit": "Editing the educations",
+    "Permission:Educations.Delete": "Deleting the educations",
+    "Permission:Educations.Admin": "Admin permission for the educations",
+    "Menu:Educations": "Educations",
+    "Education": "Education",
+    "Educations": "Educations",
+    "EducationDeletionConfirmationMessage": "Are you sure to delete the education '{0}'?",
+    "NewEducation": "New Education",
+    "EditEducation": "Edit Education",
+    //"Name": "Name",
+    "GradePointAverage": "Grade Point Average",
+    "Grade": "Grade",
+    "Grade.0": "Preparatory",
+    "Grade.1": "1. Grade",
+    "Grade.2": "2. Grade",
+    "Grade.3": "3. Grade",
+    "Grade.4": "4. Grade",
+    "Grade.5": "5. Grade",
+    "Grade.6": "6. Grade",
+    "Grade.7": "Master Degree",
+    "Grade.8": "Graduate",
+
     //University
     "Permission:Universities": "University Management",
     "Permission:Universities.Create": "Creating new universities",
