--- a/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/en.json
+++ b/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/en.json
@@ -118,11 +118,29 @@
     "UniversityDepartmentId": "University Department Id",
     "UniversityDepartmentName": "University Department Name",
 
+    //Experiences
+    "Permission:Experiences": "Experiences Management",
+    "Permission:Experiences.Create": "Creating new experiences",
+    "Permission:Experiences.Edit": "Editing the experiences",
+    "Permission:Experiences.Delete": "Deleting the experiences",
+    "Permission:Experiences.Admin": "Admin permission for the experiences",
+    "Menu:Experiences": "Experiences",
+    "Experience": "Experience",
+    "Experiences": "Experiences",
+    "ExperienceDeletionConfirmationMessage": "Are you sure to delete the experience '{0}'?",
+    "NewExperience": "New Experience",
+    "EditExperience": "Edit Experience",
+    "Title": "Job Title",
+    "Description": "Description",
+    "CompanyName": "Company Name",
 
     //Exceptions
     "InternManagementException:0": "There is already a intern with the same name: {name}",
-    "InternManagementException:1": "There is already a department with the same name: {name}"
-
-
+    "InternManagementException:1": "There is already a department with the same name: {name}",
+    "InternManagementException:2": "There is already a university with the same name: {name}",
+    "InternManagementException:3": "There is already a education with the same name: {name}",
+    "InternManagementException:4": "There is already a university department with the same name: {name}",
+    "InternManagementException:5": "There is already a experience with the same name: {name}"
+   
   }
 }
