Intern dashboard added, codes revised

--- a/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/en.json
+++ b/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/en.json
@@ -26,6 +26,10 @@
     "IsDeleted": "Is Deleted ?",
     "DeleterId": "Deleter Id",
     "DeletionTime": "Deletion Time",
+    "InternshipPeriod": "Internship Period",
+    "Contact": "Contact",
+    "Detail": "Detail",
+    "Week": "Week",
 
     // Interns
     "NewIntern": "New Intern",
