--- a/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/tr.json
+++ b/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/tr.json
@@ -3,6 +3,243 @@
   "texts": {
     "Menu:Home": "Ana sayfa",
     "Welcome": "Hoşgeldiniz",
-    "LongWelcomeMessage": "Uygulamaya hoşgeldiniz. Bu, ABP framework'ü üzerine bina edilmiş bir başlangıç projesidir. Daha fazla bilgi için abp.io adresini ziyaret edebilirsiniz."
+    "LongWelcomeMessage": "Uygulamaya hoşgeldiniz. Bu, ABP framework'ü üzerine bina edilmiş bir başlangıç projesidir. Daha fazla bilgi için abp.io adresini ziyaret edebilirsiniz.",
+    // Menü
+    "InternManagement": "Stajyer Yönetimi",
+    "Menu:InternManagement": "Stajyer Yönetimi",
+    "Permission:InternManagementAdminPermissions": "Stajyer Yönetimi Admin İzinleri",
+    "Permission:InternManagement": "Stajyer Yönetimi",
+    "CreatorId": "Oluşturanın ID'si",
+    "CreationTime": "Oluşturma Zamanı",
+    "LastModifierId": "Son Düzenleyenin ID'si",
+    "LastModificationTime": "Son Düzenleme Zamanı",
+    "Menu:Interns": "Stajyerler",
+    "Actions": "İşlemler",
+    "Close": "Kapat",
+    "Delete": "Sil",
+    "Edit": "Düzenle",
+    "AreYouSure": "Emin misiniz?",
+    "AreYouSureToDelete": "Bu öğeyi silmek istediğinizden emin misiniz?",
+    "InternDeletionConfirmationMessage": "'{0}' adlı stajyeri silmek istediğinizden emin misiniz?",
+    "SuccessfullyDeleted": "Başarıyla silindi!",
+    "IsDeleted": "Silindi mi?",
+    "DeleterId": "Silenin ID'si",
+    "DeletionTime": "Silme Zamanı",
+    "InternshipPeriod": "Staj Süreci",
+    "Contact": "İletişim",
+    "Detail": "Detay",
+    "Week": "Hafta",
+
+    // Stajyerler
+    "NewIntern": "Yeni Stajyer",
+    "EditIntern": "Stajyeri Düzenle",
+    "Intern": "Stajyer",
+    "Interns": "Stajyerler",
+    "Name": "Ad",
+    "Surname": "Soyad",
+    "PhoneNumber": "Telefon Numarası",
+    "Email": "E-posta",
+    "StartDate": "Başlangıç Tarihi",
+    "EndDate": "Bitiş Tarihi",
+    "Permission:Interns": "Stajyerler",
+    "Permission:Interns.Create": "Yeni stajyer oluşturma",
+    "Permission:Interns.Edit": "Stajyerleri düzenleme",
+    "Permission:Interns.Delete": "Stajyerleri silme",
+    "Permission:Interns.Admin": "Stajyerler için admin yetkisi",
+    "InternName": "Stajyer Adı",
+    "InternId": "Stajyerin ID'si",
+    "TotalInternshipDays": "Toplam Staj Günü",
+    "RemainingInternshipDays": "Kalan Staj Günü",
+    "InternshipCompleted": "Staj Tamamlandı",
+    "day": " gün",
+
+    //Departments
+    "Permission:Departments": "Departman Yönetimi",
+    "Permission:Departments.Create": "Yeni departman oluşturma",
+    "Permission:Departments.Edit": "Departmanları düzenleme",
+    "Permission:Departments.Delete": "Departmanları silme",
+    "Permission:Departments.Admin": "Departmanlar için yönetici izni",
+    "Menu:Departments": "Departmanlar",
+    "Departments": "Departmanlar",
+    "DepartmentDeletionConfirmationMessage": "'{0}' departmanını silmek istediğinizden emin misiniz?",
+    "NewDepartment": "Yeni Departman",
+    "EditDepartment": "Departmanı Düzenle",
+    "DepartmentId": "Departman ID'si",
+    "Department": "Departman",
+
+    //Educations
+    "Permission:Educations": "Eğitim Yönetimi",
+    "Permission:Educations.Create": "Yeni eğitim oluşturma",
+    "Permission:Educations.Edit": "Eğitimleri düzenleme",
+    "Permission:Educations.Delete": "Eğitimleri silme",
+    "Permission:Educations.Admin": "Eğitimler için yönetici izni",
+    "Menu:Educations": "Eğitimler",
+    "Education": "Eğitim",
+    "Educations": "Eğitimler",
+    "EducationDeletionConfirmationMessage": "'{0}' eğitimini silmek istediğinizden emin misiniz?",
+    "NewEducation": "Yeni Eğitim",
+    "EditEducation": "Eğitimi Düzenle",
+    //"Name": "Ad",
+    "GradePointAverage": "Not Ortalaması",
+    "Grade": "Sınıf",
+    "Grade.0": "Hazırlık",
+    "Grade.1": "1. Sınıf",
+    "Grade.2": "2. Sınıf",
+    "Grade.3": "3. Sınıf",
+    "Grade.4": "4. Sınıf",
+    "Grade.5": "5. Sınıf",
+    "Grade.6": "6. Sınıf",
+    "Grade.7": "Yüksek Lisans",
+    "Grade.8": "Mezun",
+    "EducationInformationForTheInternCouldNotBeFound": "Stajyer için eğitim bilgisi bulunamadı!!!",
+
+    //University
+    "Permission:Universities": "Üniversite Yönetimi",
+    "Permission:Universities.Create": "Yeni üniversite oluşturma",
+    "Permission:Universities.Edit": "Üniversiteleri düzenleme",
+    "Permission:Universities.Delete": "Üniversiteleri silme",
+    "Permission:Universities.Admin": "Üniversiteler için yönetici izni",
+    "Menu:Universities": "Üniversiteler",
+    "University": "Üniversite",
+    "Universities": "Üniversiteler",
+    "UniversityDeletionConfirmationMessage": "'{0}' üniversitesini silmek istediğinizden emin misiniz?",
+    "NewUniversity": "Yeni Üniversite",
+    "EditUniversity": "Üniversiteyi Düzenle",
+    "UniversityId": "Üniversite ID'si",
+    "UniversityName": "Üniversite Adı",
+
+    // Üniversite Departmanları
+    "Permission:UniversityDepartments": "Üniversite Departmanları Yönetimi",
+    "Permission:UniversityDepartments.Create": "Yeni üniversite departmanları oluşturma",
+    "Permission:UniversityDepartments.Edit": "Üniversite departmanlarını düzenleme",
+    "Permission:UniversityDepartments.Delete": "Üniversite departmanlarını silme",
+    "Permission:UniversityDepartments.Admin": "Üniversite departmanları için yönetici izni",
+    "Menu:UniversityDepartments": "Üniversite Departmanları",
+    "UniversityDepartment": "Üniversite Departmanı",
+    "UniversityDepartments": "Üniversite Departmanları",
+    "UniversityDepartmentDeletionConfirmationMessage": "'{0}' üniversite departmanını silmek istediğinizden emin misiniz?",
+    "NewUniversityDepartment": "Yeni Üniversite Departmanı",
+    "EditUniversityDepartment": "Üniversite Departmanını Düzenle",
+    "UniversityDepartmentId": "Üniversite Departmanının ID'si",
+    "UniversityDepartmentName": "Üniversite Departmanı Adı",
+
+    // Deneyimler
+    "Permission:Experiences": "Deneyimler Yönetimi",
+    "Permission:Experiences.Create": "Yeni deneyimler oluşturma",
+    "Permission:Experiences.Edit": "Deneyimleri düzenleme",
+    "Permission:Experiences.Delete": "Deneyimleri silme",
+    "Permission:Experiences.Admin": "Deneyimler için yönetici izni",
+    "Menu:Experiences": "Deneyimler",
+    "Experience": "Deneyim",
+    "Experiences": "Deneyimler",
+    "ExperienceDeletionConfirmationMessage": "'{0}' deneyimini silmek istediğinizden emin misiniz?",
+    "NewExperience": "Yeni Deneyim",
+    "EditExperience": "Deneyimi Düzenle",
+    "Title": "İş Unvanı",
+    "Description": "Açıklama",
+    "CompanyName": "Şirket Adı",
+    "ExperienceInformationForTheInternCouldNotBeFound": "Stajyer için deneyim bilgisi bulunamadı!!!",
+
+    // Projeler
+    "Permission:Projects": "Projeler Yönetimi",
+    "Permission:Projects.Create": "Yeni projeler oluşturma",
+    "Permission:Projects.Edit": "Projeleri düzenleme",
+    "Permission:Projects.Delete": "Projeleri silme",
+    "Permission:Projects.Admin": "Projeler için yönetici izni",
+    "Menu:Projects": "Projeler",
+    "Project": "Proje",
+    "Projects": "Projeler",
+    "ProjectDeletionConfirmationMessage": "'{0}' projesini silmek istediğinizden emin misiniz?",
+    "NewProject": "Yeni Proje",
+    "EditProject": "Projeyi Düzenle",
+    "ProjectInformation": "Proje Bilgisi",
+    //"Name": "Ad",
+    //"Description": "Açıklama",
+    //"StartDate": "Başlangıç Tarihi",
+    //"EndDate": "Bitiş Tarihi",
+    //"Interns": "Stajyerler",
+    "ProjectInformationForTheInternCouldNotBeFound": "Stajyer için proje bilgisi bulunamadı!!!",
+
+    // Kurslar
+    "Permission:Courses": "Kurs Yönetimi",
+    "Permission:Courses.Create": "Yeni kurs oluşturma",
+    "Permission:Courses.Edit": "Kursları düzenleme",
+    "Permission:Courses.Delete": "Kursları silme",
+    "Permission:Courses.Admin": "Kurslar için yönetici izni",
+    "Menu:Courses": "Kurslar",
+    "Course": "Kurs",
+    "Courses": "Kurslar",
+    "CourseDeletionConfirmationMessage": "'{0}' kursunu silmek istediğinizden emin misiniz?",
+    "NewCourse": "Yeni Kurs",
+    "EditCourse": "Kursu Düzenle",
+    "CourseInformation": "Kurs Bilgisi",
+    //"Name": "Ad",
+    //"Description": "Açıklama",
+    "PublishDate": "Yayın Tarihi",
+    "CourseInformationForTheInternCouldNotBeFound": "Stajyer için kurs bilgisi bulunamadı!!!",
+
+    // Eğitmenler
+    "Permission:Instructors": "Eğitmenler Yönetimi",
+    "Permission:Instructors.Create": "Yeni eğitmenler oluşturma",
+    "Permission:Instructors.Edit": "Eğitmenleri düzenleme",
+    "Permission:Instructors.Delete": "Eğitmenleri silme",
+    "Permission:Instructors.Admin": "Eğitmenler için yönetici izni",
+    "Menu:Instructors": "Eğitmenler",
+    "Instructor": "Eğitmen",
+    "Instructors": "Eğitmenler",
+    "InstructorDeletionConfirmationMessage": "'{0}' eğitmenini silmek istediğinizden emin misiniz?",
+    "NewInstructor": "Yeni Eğitmen",
+    "EditInstructor": "Eğitmeni Düzenle",
+    "InstructorInformation": "Eğitmen Bilgisi",
+    //"Name": "Ad",
+    //"Title": "Ünvan",
+
+    // Çalışmalar
+    "Permission:Works": "Çalışmalar Yönetimi",
+    "Permission:Works.Create": "Yeni çalışmalar oluşturma",
+    "Permission:Works.Edit": "Çalışmaları düzenleme",
+    "Permission:Works.Delete": "Çalışmaları silme",
+    "Permission:Works.Admin": "Çalışmalar için yönetici izni",
+    "Menu:Works": "Çalışmalar",
+    "Work": "Çalışma",
+    "Works": "Çalışmalar",
+    "WorkDeletionConfirmationMessage": "'{0}' çalışmasını silmek istediğinizden emin misiniz?",
+    "NewWork": "Yeni Çalışma",
+    "EditWork": "Çalışmayı Düzenle",
+    "WorkInformation": "Çalışma Bilgisi",
+    //"Name": "Ad",
+    //"Description": "Açıklama",
+    "Date": "Tarih",
+    "NoWorksForThisWeek": "Bu hafta için çalışma yok",
+
+    // Dosyalar
+    "Permission:Files": "Dosya Yönetimi",
+    "Permission:Files.Create": "Yeni dosya oluşturma",
+    "Permission:Files.Delete": "Dosyayı silme",
+    "Permission:Files.Admin": "Dosyalar için yönetici izni",
+    "Menu:Files": "Dosyalar",
+    "File": "Dosya",
+    "Files": "Dosyalar",
+    "FileDeletionConfirmationMessage": "'{0}' dosyasını silmek istediğinizden emin misiniz?",
+    "NewFile": "Yeni Dosya",
+    "FileInformation": "Dosya Bilgisi",
+    "FileUpload": "Dosya Yükle",
+    //"Name": "Ad",
+    "FileInformationForTheInternCouldNotBeFound": "Stajyer için dosya bilgisi bulunamadı!!!",
+
+    // İstisnalar
+    "InternManagementException:0": "Aynı isimde bir stajyer zaten mevcut: {name}",
+    "InternManagementException:1": "Aynı isimde bir departman zaten mevcut: {name}",
+    "InternManagementException:2": "Aynı isimde bir üniversite zaten mevcut: {name}",
+    "InternManagementException:3": "Aynı isimde bir eğitim zaten mevcut: {name}",
+    "InternManagementException:4": "Aynı isimde bir üniversite departmanı zaten mevcut: {name}",
+    "InternManagementException:5": "Aynı isimde bir deneyim zaten mevcut: {name}",
+    "InternManagementException:6": "Aynı isimde bir proje zaten mevcut: {name}",
+    "InternManagementException:7": "Aynı isimde bir kurs zaten mevcut: {name}",
+    "InternManagementException:8": "Aynı isimde bir eğitmen zaten mevcut: {name}",
+    "InternManagementException:9": "Dosya uzantısı desteklenmiyor. Lütfen bir {fileType} dosyası yükleyin.",
+    "InternManagementException:10": "Aynı isimde bir dosya zaten mevcut: {name}",
+    "InternManagementException:11": "Dosya bulunamadı, dosya adını kontrol edin: {name}",
+    "InternManagementException:12": "Bitiş tarihi başlangıç tarihinden önce olamaz."
   }
 }
